Fix duplicate imports massage  and remove unnecessary scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,8 @@ button:active {
     width: 100%;
     max-width: 400px;
     margin-top: 0;
-    max-height: 300px;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-direction: column;
 }
 
 h2 {
